; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/kcm/extr_protocol.c_free_cred.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/kcm/extr_protocol.c_free_cred.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kcm_ntlm_cred = type { i32, %struct.kcm_ntlm_cred*, %struct.kcm_ntlm_cred* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kcm_ntlm_cred*)* @free_cred to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_cred(%struct.kcm_ntlm_cred* %0) #0 {
  %2 = alloca %struct.kcm_ntlm_cred*, align 8
  store %struct.kcm_ntlm_cred* %0, %struct.kcm_ntlm_cred** %2, align 8
  %3 = load %struct.kcm_ntlm_cred*, %struct.kcm_ntlm_cred** %2, align 8
  %4 = getelementptr inbounds %struct.kcm_ntlm_cred, %struct.kcm_ntlm_cred* %3, i32 0, i32 2
  %5 = load %struct.kcm_ntlm_cred*, %struct.kcm_ntlm_cred** %4, align 8
  %6 = call i32 @free(%struct.kcm_ntlm_cred* %5)
  %7 = load %struct.kcm_ntlm_cred*, %struct.kcm_ntlm_cred** %2, align 8
  %8 = getelementptr inbounds %struct.kcm_ntlm_cred, %struct.kcm_ntlm_cred* %7, i32 0, i32 1
  %9 = load %struct.kcm_ntlm_cred*, %struct.kcm_ntlm_cred** %8, align 8
  %10 = call i32 @free(%struct.kcm_ntlm_cred* %9)
  %11 = load %struct.kcm_ntlm_cred*, %struct.kcm_ntlm_cred** %2, align 8
  %12 = getelementptr inbounds %struct.kcm_ntlm_cred, %struct.kcm_ntlm_cred* %11, i32 0, i32 0
  %13 = call i32 @krb5_data_free(i32* %12)
  %14 = load %struct.kcm_ntlm_cred*, %struct.kcm_ntlm_cred** %2, align 8
  %15 = call i32 @free(%struct.kcm_ntlm_cred* %14)
  ret void
}

declare dso_local i32 @free(%struct.kcm_ntlm_cred*) #1

declare dso_local i32 @krb5_data_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
